# Tictactoe

./: docker-compose.yml  pyproject.toml
src/root/: settings.py  urls.py
src/root/templates/: layout.html
src/root/templates/registration/: login.html  register.html
src/root/views/: index.py  login.py  logout.py  register.py
src/tictactoe/: apps.py  models.py  urls.py
src/tictactoe/forms/: step.py
src/tictactoe/migrations/: 0001_initial.py  0002_alter_game_winner.py
src/tictactoe/templates/: game.html  index.html
src/tictactoe/views/: __init__.py  game.py  new_game.py  start_page.py
