[tool.poetry]
name = "sbc"
version = "0.1.0"
description = ""
authors = ["Илья Иванов <iaivanov@4dk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
